# manticore

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .manticorerc  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Dockerfile.test  LICENSE  MACOS_PERFORMANCE.md  MIGRATION_FROM_TOX.md  README.md  README_DOCKER_TESTS.md  SOLVER_INSTALLATION.md  TRANSITION.md  codecov.yml  ethereum_test_results.txt  lgtm.yml  logfile  manticore.py  manticore_examples_test_results.json  mypy.ini  pyproject.toml  readthedocs.yml  requirements.txt  run-tests-docker.sh  setup.cfg  setup.py  stats.py  test_all_examples.py  test_examples.py  tox.ini
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  osx.yml  pip-audit.yml  release.yml
MUICore/tests/: test_ethereum.py  test_native.py
binary/: __init__.py
core/: executor.py  mappings.py  memory.py
core/cpu/: bitwise.py  register.py  x86.py
core/smtlib/: __init__.py  expression.py
docs/: Makefile  api.rst  base.rst  conf.py  evm.rst  gotchas.rst  index.rst  internal.rst  make.bat  models.rst  native.rst  plugins.rst  requirements.txt  states.rst  syminput.rst  utilities.rst  verifier.rst  wasm.rst  worker.rst
examples/: README.md  cross_platform_example.py  test_examples.py
examples/ctf/: README.md
examples/evm/: asm.py  asm_to_smtlib.py  complete.py  contract.evm  coverage.py  coverage.sol  experiment.py  integer_overflow.py  mappingchallenge.py  mappings.py  minimal-json.py  minimal.py  minimal_bytecode_only.py  minimal_se_test.py  reentrancy_concrete.py  reentrancy_symbolic.py  send_ether.py  send_ether.sol  seth.py  simple_functions.py  simple_int_overflow.sol  simple_int_overflow_assert.py  simple_mapping.py  simple_mapping.sol  simple_multi_func.sol  simple_transaction.py  simple_value_check.sol  solidse.py  two_tx_ovf.sol  umd_example.sol  use_def.py  vt.sol  wallet.py
examples/linux/: .gitignore  Makefile  arguments  arguments.c  baby-re  baby-re.c  basic  basic.c  basic.original  basic_state_merging.c  basic_statemerging.c  cbahacks.py  crackme  crackme.c  crackme.py  fclose.c  fileio.c  helloworld  helloworld.c  ibranch  ibranch.c  indexhell  indexhell.c  introspect_state.py  ioctl_bogus  ioctl_bogus.c  ioctl_socket  ioctl_socket.c  lava.c  nostdlib.c  nostdlib32  sendmail  sendmail.c  server.c  simple_copy.c  simpleassert.c  sindex  sindex.c  strncmp  strncmp.c
examples/pathgrind/: Makefile  ex1  ex1.c  ex1.txt  exam_1.lex  exam_2.lex  exam_3.lex  exam_4.lex  example  example.c  input.adl  input.elf  input.js  input.php  input.sch  input.sed  input.swf  input.tiff  input2.txt  input3.txt  input_table.txt  input_table_2.txt  input_table_3.txt  input_tcas.txt  lex.yy.c  md5  md5.c  (+35 more)
manticore/: .fuse_hidden0000d38700000e2c  __init__.py  __main__.py  abitypes.py  config.py  ethdetectors.py  ethereum.py  exceptions.py  main.py  manticore.py  models.py  parsetab.py  seth.py
mcore_1nq6xy2o/: state_00000000.pkl
mcore_3g0lu_bw/: state_00000000.pkl
mcore_7yP2pz/: command.sh  visited.txt
mcore_JJpX92/: command.sh  test_00000000.input  test_00000000.messages  test_00000000.pkl  test_00000000.smt  test_00000000.stdin  test_00000000.stdout  test_00000000.syscalls  test_00000001.messages  test_00000001.pkl  test_00000001.smt  test_00000001.stdin  test_00000001.stdout  test_00000001.syscalls
mcore_dnrxgv/: test_00000000.messages  test_00000000.pkl  test_00000000.smt  test_00000000.syscalls  test_00000000.trace  test_00000001.input  test_00000001.messages  test_00000001.pkl  test_00000001.smt  test_00000001.syscalls  test_00000001.trace  visited.txt
mcore_m6m3aduw/: state_00000000.pkl
mcore_piezi28h/: state_00000000.pkl
mcore_rkdff6vs/: state_00000000.pkl
mcore_umscps4v/: state_00000000.pkl
mcore_xa1byocj/: state_00000000.pkl
mcore_y6sptvt2/: state_00000000.pkl
mcore_zh50p3tl/: state_00000000.pkl
models/: libc.py  linux.py
scripts/: benchmark.py  compare_traces.py  configure_solver.py  dev_setup.py  extract_syscalls.py  filter_lintable_files.py  follow_trace.py  gdb.py  hook_injector.py  mdb.py  prof.py  pyfile_exists.py  qemu.py  run_tests.sh  sandshrew.py  solc_wrapper.py  stats.py  travis_install.sh  travis_install_unicorn.sh  travis_install_z3.sh  travis_test.sh  verify.py
server/: .gitignore  MUICore.proto  README.md  codegen.sh  generate.py  justfile  pyproject.toml  requirements-dev.txt  setup.py
server/manticore_server/: ManticoreServer.proto  ManticoreServer_pb2.py  ManticoreServer_pb2.pyi  ManticoreServer_pb2_grpc.py  __init__.py  evm_utils.py  introspect_plugin.py  manticore_server.py  native_plugin.py  native_utils.py
server/muicore/: MUICore.proto  MUICore_pb2.py  MUICore_pb2.pyi  MUICore_pb2_grpc.py  __init__.py  build_binary.sh  evm_utils.py  introspect_plugin.py  mui_server.py  native_utils.py  sample_client.py  setup.py  utils.py
server/tests/: mock_classes.py  test_ethereum.py  test_native.py
server/tests/contracts/: adder.sol
test/: mockmem.py  test_armv7_bitwise.py  test_armv7cpu.py  test_armv7rf.py  test_binaries.py  test_cpu_automatic.py  test_cpu_manual.py  test_driver.py  test_linux.py  test_manticore.py  test_memdumps.py  test_memory.py  test_register.py  test_signal.py  test_smtlibv2.py  test_state.py
tests/: MIGRATION_GUIDE.md  README.md  RECOMMENDED_MARKERS.md  TEST_ORGANIZATION.md  __init__.py  add_markers.py  analyze_tests.py  conftest.py  eth_benchmark.py  eth_detectors.py  eth_general.py  mark_all_tests.py  markers.py  mockmem.py  test_abi.py  test_armv7_bitwise.py  test_armv7cpu.py  test_armv7rf.py  test_binaries.py  test_config.py  test_cpu_automatic.py  test_cpu_manual.py  test_driver.py  test_dyn.py  test_eth.py  test_eth_benchmark.py  test_eth_plugins.py  test_events.py  test_evm.py  test_lazy_memory.py  test_linux.py  test_manticore.py  test_memdumps.py  test_memory.py  test_models.py  test_register.py  test_rlp.py  test_signal.py  test_slam_regre.py  test_smtlibv2.py  (+5 more)
(+1506 files in other folders)
