[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manticore"
version = "0.3.7"
description = "Manticore is a symbolic execution tool for analysis of binaries and smart contracts."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" }
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = [
    "pyyaml",
    "pysha3",
    "protobuf~=3.20",
    "prettytable",
    "ply",
    "rlp",
    "intervaltree",
    "crytic-compile>=0.2.2",
    "wasm-tob @ git+https://github.com/trailofbits/wasm-tob.git",
    "pyevmasm>=0.2.3",
    "z3-solver",
    "dataclasses; python_version < '3.7'",
]
requires-python = "<3.11,>=3.7"

[project.urls]
Homepage = "https://github.com/trailofbits/manticore"
Documentation = "https://github.com/trailofbits/manticore"
Issues = "https://github.com/trailofbits/manticore/issues"
Source = "https://github.com/trailofbits/manticore"

[project.scripts]
manticore = "manticore.__main__:main"
manticore-verifier = "manticore.ethereum.verifier:main"

[project.optional-dependencies]
native = [
    "capstone==5.0.0rc2",
    "pyelftools",
    "unicorn~=2.0",
]
redis = ["redis"]
lint = [
    "black~=22.0",
    "mypy==0.790",
]
dev-noks = [
    "build",
    "manticore[native,lint]",
    "coverage",
    "py-evm",
    "Sphinx",
    "pytest>=5.3.0",
    "pytest-xdist>=1.30.0",
    "pytest-cov>=2.8.1",
    "jinja2"
]
dev = [
    "manticore[dev-noks]",
    "keystone-engine",
]

[tool.setuptools.packages.find]
include = ["manticore", "manticore.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
manticore = ["*.proto"]

# Tool configurations consolidated from separate files

[tool.black]
line-length = 100
extend-exclude = '''
(
  venv
  | server # Has its own formatting
)
'''

[tool.mypy]
python_version = "3.7"
files = ["manticore", "tests"]
ignore_missing_imports = true

# Generated files
[[tool.mypy.overrides]]
module = [
    "manticore.ethereum.parsetab",
    "manticore.core.state_pb2"
]
ignore_errors = true

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/parsetab.py", "*_pb2.py", "venv/*", "server/*"]

[tool.pytest.ini_options]
minversion = "5.3.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-n auto --durations=10"

[tool.coverage.run]
source = ["manticore"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
    "*/parsetab.py",
    "*_pb2.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Note: flake8 doesn't support pyproject.toml natively yet
# These settings are kept in tox.ini for now but documented here
# [tool.flake8]
# ignore = E265,E501,F403,F405,E266,E712,F841,E741,E722,E731
# max-line-length = 100
# exclude = .tox,.*.egg,.git,docs/,examples/,scripts/,tests/