[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manticore_server"
version = "0.0.1"
description = "Manticore server component for remote analysis"
requires-python = ">=3.8"
dependencies = [
    "manticore[native] @ file:///..",
    "protobuf~=3.20",
    "grpcio~=1.46",
    "crytic-compile>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools",
    "mypy-protobuf",
    "types-protobuf~=3.20",
    "shiv~=1.0.1",
    "types-setuptools",
    "black~=22.0",
    "isort==5.10.1",
    "mypy==0.942",
]

[project.scripts]
manticore_server = "manticore_server.manticore_server:main"

[tool.setuptools.packages.find]
include = ["manticore_server", "manticore_server.*"]
exclude = ["tests", "tests.*"]


[tool.mypy]
files = ["manticore_server", "tests"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.isort]
profile = "black"
skip = ["venv", "build", "manticore_server/ManticoreServer_pb2.py", "manticore_server/ManticoreServer_pb2_grpc.py"]

[tool.black]
line-length = 88
extend-exclude = '''
    ManticoreServer_pb2_grpc\.py
  | ManticoreServer_pb2\.py
  | ManticoreServer_pb2\.pyi
  | venv
'''