[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manticore_server"
version = "0.0.1"
description = "Manticore server component for remote analysis"
requires-python = ">=3.9"
dependencies = [
    "manticore[native] @ file://..",
    "protobuf>=3.20,<5",
    "grpcio~=1.46",
    "crytic-compile>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools",
    "mypy-protobuf",
    "types-protobuf>=3.20,<5",
    "shiv~=1.0.1",
    "types-setuptools",
    "ruff>=0.1.0",
    "mypy~=1.0",
]

[project.scripts]
manticore_server = "manticore_server.manticore_server:main"

[tool.setuptools.packages.find]
include = ["manticore_server", "manticore_server.*"]
exclude = ["tests", "tests.*"]


[tool.mypy]
files = ["manticore_server", "tests"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.ruff]
line-length = 88
exclude = [
    "venv",
    "build",
    "manticore_server/ManticoreServer_pb2.py",
    "manticore_server/ManticoreServer_pb2_grpc.py",
    "manticore_server/ManticoreServer_pb2.pyi",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E711", "E722", "F403", "F405", "F841"]